# rust-exercice

./: Cargo.toml  README.org
fixtures/: chargeback.csv  deposit.csv  dispute.csv  error.csv  resolve.csv  withdrawal.csv
src/: lib.rs  main.rs
src/dto/: client_account.rs  mod.rs  transaction.rs
src/errors/: mod.rs
src/parser/: mod.rs
tests/: mod.rs
