[package]
name = "rust-exercice"
description = "Generate report to financial transactions csv file"
version = "0.1.0"
authors = ["Matheus Almeida <matheusalmeida025@gmail.com>"]
edition = "2021"
publish = false


[dependencies]
clap = { version = "4.4.0", default-features = false, features = ["cargo", "color", "std", "suggestions", "usage", "wrap_help"] }
thiserror = { version = "1.0.47", default-features = false }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }